# FantasyFootballCalc

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
data/: sample_mentions.json  sample_players.json
data/runtime/: calibration.json  latest_players.json
docs/: MAKE_IT_REAL.md
scripts/: smoke_test.py
src/fantasy_value/: __init__.py  api.py  calibration.py  cli.py  models.py  repository.py  scoring.py  sleepers.py  trade.py
src/fantasy_value/agents/: __init__.py  article_sources.py  online_stats_agent.py  pipeline.py  scheduler.py  sentiment_agent.py  stats_agent.py
tests/: test_agent_pipeline.py  test_api_data_fallback.py  test_calibration.py  test_online_stats_agent.py  test_scoring.py  test_sentiment_agent.py  test_sleepers.py
web/: app.js  index.html  styles.css
