[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy-football-calc"
version = "0.1.0"
description = "AI-assisted fantasy football valuation, ranking, and trade analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FantasyFootballCalc contributors" }]
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
fantasy-football-calc = "fantasy_value.cli:main"
fantasy-edge = "fantasy_value.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
